--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
